# warm-image

./: BUILD  Gopkg.toml  README.md  WORKSPACE  clusterrolebinding.yaml  controller.py  controller.yaml  example-warmimage.yaml  main.go  namespace.yaml  release.yaml  requirements.txt  warmimage.yaml
artifacts/examples/: BUILD  authz.yaml  example-bar.yaml
cmd/controller/: BUILD  main.go
cmd/sleeper/: BUILD  main.go
config/: BUILD  controller.yaml  serviceaccount.yaml
hack/: print-workspace-status.sh  update-codegen.sh  update-deps.sh
pkg/apis/samplecontroller/: BUILD
pkg/apis/samplecontroller/v1alpha1/: BUILD  bar_types.go  register.go  zz_generated.deepcopy.go
pkg/apis/warmimage/: BUILD  register.go
pkg/apis/warmimage/v2/: BUILD  doc.go  register.go  types.go  zz_generated.deepcopy.go
pkg/client/clientset/versioned/: BUILD  BUILD.bazel  clientset.go
pkg/client/clientset/versioned/fake/: BUILD  clientset_generated.go  register.go
pkg/client/clientset/versioned/scheme/: BUILD  BUILD.bazel  register.go
pkg/client/clientset/versioned/typed/samplecontroller/v1alpha1/: BUILD  bar.go  foo.go  generated_expansion.go  samplecontroller_client.go
pkg/client/clientset/versioned/typed/samplecontroller/v1alpha1/fake/: BUILD  fake_bar.go  fake_foo.go  fake_samplecontroller_client.go
pkg/client/clientset/versioned/typed/warmimage/v2/: BUILD.bazel  doc.go  generated_expansion.go  warmimage.go  warmimage_client.go
pkg/client/clientset/versioned/typed/warmimage/v2/fake/: BUILD.bazel  fake_warmimage.go  fake_warmimage_client.go
pkg/client/informers/externalversions/: BUILD  BUILD.bazel  factory.go  generic.go
pkg/client/informers/externalversions/internalinterfaces/: BUILD  BUILD.bazel  factory_interfaces.go
pkg/client/informers/externalversions/samplecontroller/: BUILD  interface.go
pkg/client/informers/externalversions/samplecontroller/v1alpha1/: BUILD  bar.go  foo.go  interface.go
pkg/client/informers/externalversions/warmimage/: BUILD.bazel  interface.go
pkg/client/informers/externalversions/warmimage/v2/: BUILD.bazel  interface.go  warmimage.go
pkg/client/listers/samplecontroller/v1alpha1/: BUILD  bar.go  expansion_generated.go  foo.go
pkg/client/listers/warmimage/v2/: BUILD.bazel  expansion_generated.go  warmimage.go
pkg/controller/: BUILD.bazel  controller.go
pkg/controller/bar/: BUILD.bazel  controller.go
pkg/controller/foo/: BUILD.bazel  controller.go
pkg/controller/warmimage/: BUILD.bazel  controller.go
pkg/reconciler/warmimage/: warmimage.go
pkg/reconciler/warmimage/resources/: daemonset.go  daemonset_test.go  meta.go
pkg/signals/: BUILD
