load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "expansion_generated.go",
        "warmimage.go",
    ],
    importpath = "github.com/mattmoor/warm-image/pkg/client/listers/warmimage/v2",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/warmimage/v2:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
